[gd_scene load_steps=11 format=3 uid="uid://gdhc7otrsp1a"]

[ext_resource type="PackedScene" uid="uid://p8nkjkru6n3a" path="res://Easy1-1/Easy1-1-lvl.tscn" id="1_rouqf"]
[ext_resource type="PackedScene" uid="uid://xjxhnin5ldsn" path="res://Blokus Menu and Functions/2TEST123.tscn" id="2_357u2"]
[ext_resource type="PackedScene" uid="uid://fil0b8fmwwvh" path="res://Blokus Menu and Functions/door.tscn" id="3_ij5x8"]
[ext_resource type="PackedScene" uid="uid://b46gf4miurck4" path="res://Characters/box.tscn" id="4_27ivj"]
[ext_resource type="Script" path="res://Characters/box.gd" id="5_bcnn6"]
[ext_resource type="PackedScene" uid="uid://ckusgsq1w4num" path="res://Characters/button.tscn" id="6_m30a7"]
[ext_resource type="Script" path="res://Characters/button.gd" id="7_8t4fu"]
[ext_resource type="PackedScene" uid="uid://32eaofnlswor" path="res://Characters/character.tscn" id="8_383m4"]
[ext_resource type="Script" path="res://Characters/character1-1.gd" id="9_7u241"]
[ext_resource type="Texture2D" uid="uid://cspl6vs0og1gs" path="res://Screenshot (25).png" id="9_g27p5"]

[node name="Node2D" type="Node2D"]
scale = Vector2(0.5, 0.5)

[node name="WorldArea" parent="." instance=ExtResource("1_rouqf")]
light_mask = 5
position = Vector2(1144, 742)
scale = Vector2(2, 2)
collision_layer = 2117

[node name="Test123" parent="." instance=ExtResource("2_357u2")]
position = Vector2(0, -8)
scale = Vector2(2, 2)

[node name="platform" parent="Test123" index="0"]
light_mask = 8

[node name="platform2" parent="Test123" index="1"]
light_mask = 8

[node name="Up" parent="Test123" index="2"]
light_mask = 8
visibility_layer = 8

[node name="Sprite2D" parent="Test123/Up" index="0"]
light_mask = 8
visibility_layer = 8

[node name="Area2D" parent="Test123/Up/Sprite2D" index="0"]
light_mask = 8
visibility_layer = 8
collision_layer = 8

[node name="CollisionShape2D" parent="Test123/Up/Sprite2D/Area2D" index="0"]
light_mask = 8
visibility_layer = 8
z_index = 2

[node name="Down" parent="Test123" index="3"]
light_mask = 8
visibility_layer = 8

[node name="Sprite2D" parent="Test123/Down" index="0"]
light_mask = 8
visibility_layer = 8

[node name="Area2D" parent="Test123/Down/Sprite2D" index="0"]
light_mask = 8
visibility_layer = 8
collision_layer = 8

[node name="CollisionShape2D" parent="Test123/Down/Sprite2D/Area2D" index="0"]
light_mask = 8
visibility_layer = 8

[node name="Left" parent="Test123" index="4"]
light_mask = 8
visibility_layer = 8

[node name="Area2D" parent="Test123/Left/Sprite2D" index="0"]
light_mask = 8
visibility_layer = 8
collision_layer = 8

[node name="CollisionShape2D" parent="Test123/Left/Sprite2D/Area2D" index="0"]
light_mask = 8
visibility_layer = 8

[node name="Right" parent="Test123" index="5"]
light_mask = 8
visibility_layer = 8

[node name="Sprite2D" parent="Test123/Right" index="0"]
light_mask = 8
visibility_layer = 8

[node name="Area2D" parent="Test123/Right/Sprite2D" index="0"]
light_mask = 8
visibility_layer = 8
collision_layer = 8

[node name="CollisionShape2D" parent="Test123/Right/Sprite2D/Area2D" index="0"]
light_mask = 8
visibility_layer = 8

[node name="W" parent="Test123" index="6"]
light_mask = 8
visibility_layer = 8

[node name="Sprite2D" parent="Test123/W" index="0"]
light_mask = 8
visibility_layer = 8

[node name="Area2D" parent="Test123/W/Sprite2D" index="0"]
light_mask = 8
visibility_layer = 8
collision_layer = 8

[node name="CollisionShape2D" parent="Test123/W/Sprite2D/Area2D" index="0"]
light_mask = 8
visibility_layer = 8

[node name="platform3" parent="Test123" index="7"]
light_mask = 8
visibility_layer = 8

[node name="platform4" parent="Test123" index="8"]
light_mask = 8
visibility_layer = 8

[node name="platform5" parent="Test123" index="9"]
light_mask = 8
visibility_layer = 8

[node name="platform6" parent="Test123" index="10"]
light_mask = 8
visibility_layer = 8

[node name="platform7" parent="Test123" index="11"]
light_mask = 8
visibility_layer = 8

[node name="platform8" parent="Test123" index="12"]
light_mask = 8
visibility_layer = 8

[node name="TextEdit11" parent="Test123" index="14"]
offset_left = 1388.0
offset_top = 220.0
offset_right = 1523.0
offset_bottom = 261.0

[node name="TextEdit12" parent="Test123" index="15"]
offset_left = 1371.0
offset_top = 489.0
offset_right = 1506.0
offset_bottom = 530.0

[node name="TextEdit10" parent="Test123" index="16"]
offset_left = 1388.0
offset_top = 349.0
offset_right = 1523.0
offset_bottom = 390.0

[node name="TextEdit9" parent="Test123" index="17"]
offset_left = 1396.0
offset_top = 104.0
offset_right = 1531.0
offset_bottom = 145.0

[node name="TextEdit6" parent="Test123" index="18"]
light_mask = 8
visibility_layer = 8

[node name="TextEdit8" parent="Test123" index="20"]
light_mask = 8
visibility_layer = 8

[node name="TextEdit5" parent="Test123" index="21"]
light_mask = 8
visibility_layer = 8

[node name="Box" parent="." instance=ExtResource("4_27ivj")]
z_index = 1
position = Vector2(1024, 710)
scale = Vector2(2, 2)
collision_layer = 18452
collision_mask = 18452
script = ExtResource("5_bcnn6")

[node name="Button" parent="." instance=ExtResource("6_m30a7")]
position = Vector2(1918, 700)
script = ExtResource("7_8t4fu")

[node name="Door" parent="." instance=ExtResource("3_ij5x8")]
position = Vector2(1620, 370)
scale = Vector2(2, 2)
collision_layer = 16512
collision_mask = 16512

[node name="Character" parent="." instance=ExtResource("8_383m4")]
position = Vector2(450, 718)
scale = Vector2(2, 2)
collision_layer = 196
collision_mask = 196
script = ExtResource("9_7u241")

[node name="AnimatedSprite2D" parent="Character" index="0"]
frame_progress = 0.310844

[node name="Screenshot(25)" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(1952, 980)
scale = Vector2(2, 2)
texture = ExtResource("9_g27p5")

[connection signal="area_entered" from="WorldArea" to="Box" method="_on_world_area_area_entered"]
[connection signal="area_entered" from="WorldArea" to="Character" method="_on_world_area_area_entered"]
[connection signal="area_exited" from="WorldArea" to="Box" method="_on_world_area_area_exited"]
[connection signal="area_exited" from="WorldArea" to="Character" method="_on_world_area_area_exited"]
[connection signal="area_entered" from="Box" to="Button" method="_on_box_area_entered"]
[connection signal="area_entered" from="Box" to="Character" method="_on_box_area_entered"]
[connection signal="area_exited" from="Box" to="Button" method="_on_box_area_exited"]
[connection signal="area_exited" from="Box" to="Character" method="_on_box_area_exited"]
[connection signal="area_entered" from="Button" to="Box" method="_on_button_area_entered"]
[connection signal="area_exited" from="Button" to="Box" method="_on_button_area_exited"]
[connection signal="area_entered" from="Door" to="Box" method="_on_door_area_entered"]
[connection signal="area_entered" from="Door" to="Character" method="_on_door_area_entered"]
[connection signal="area_entered" from="Character" to="Box" method="_on_character_area_entered"]
[connection signal="area_exited" from="Character" to="Box" method="_on_character_area_exited"]

[editable path="Test123"]
[editable path="Test123/Up"]
[editable path="Test123/Down"]
[editable path="Test123/Left"]
[editable path="Test123/Right"]
[editable path="Test123/W"]
[editable path="Door"]
[editable path="Character"]
